--- a/UFS-DC-Chef-CRM-App/Src/CustomerContactScreen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/CustomerContactScreen.fx.yaml
@@ -1626,7 +1626,9 @@
                                             PaddingLeft: =5
                                             PaddingRight: =5
                                             PaddingTop: =5
-                                            Visible: =_V_SelectedCustomerInCustModule.Status='Status (Customers)'.Active
+                                            Visible: |-
+                                                =//_V_SelectedCustomerInCustModule.Status='Status (Customers)'.Active
+                                                If(_V_Customer_New ,false,IsBlank(_V_SelectedCustomerInCustModule),false,true)
                                             Width: =Self.Height
                                             ZIndex: =5
 
@@ -1667,6 +1669,7 @@
                                             TemplateFill: =RGBA(214, 221, 224, 0)
                                             TemplateSize: =30
                                             Transition: =Transition.Push
+                                            Visible: =If(_V_Customer_New ,false,IsBlank(_V_SelectedCustomerInCustModule),false,true)
                                             Width: =Parent.Width-30
                                             ZIndex: =1
 
@@ -1972,6 +1975,7 @@
                                                         _C_Concepts,
                                                         ThisRecord.Customer.Customer = _V_SelectedCustomerInCustModule.Customer, !removeofflineRequired
                                                     ), "ulchef_ofdoors"), Value(ulchef_ofdoors))
+                                                Visible: =If(_V_Customer_New ,false,IsBlank(_V_SelectedCustomerInCustModule),false,true)
                                                 Width: =Parent.Width
                                                 ZIndex: =1
 
@@ -2037,7 +2041,7 @@
                                                         
                                                 Size: =15
                                                 Text: ="Add"
-                                                Visible: =If(_V_Customer_New,false,true)
+                                                Visible: =If(_V_Customer_New ,false,IsBlank(_V_SelectedCustomerInCustModule),false,true)
                                                 Width: =Parent.Width-25
                                                 ZIndex: =2
 
