--- a/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
@@ -961,7 +961,7 @@
                         LayoutMinWidth: =0
                         LoadingSpinner: =LoadingSpinner.Data
                         TemplatePadding: =6
-                        TemplateSize: =120
+                        TemplateSize: =100
                         Width: =135
                         ZIndex: =6
 
@@ -1029,6 +1029,7 @@
                             PaddingRight: =10
                             Size: =12
                             Text: =ThisItem.Value
+                            Visible: =false
                             Width: =Parent.TemplateWidth -5
                             ZIndex: =1
 
@@ -1046,7 +1047,9 @@
                             OnSelect: =Gal_Button.Pressed
                             Size: =12
                             Text: =
-                            Visible: =//_V_SelectedHeaderOptionInCall = ThisItem.Value
+                            Visible: |-
+                                =//_V_SelectedHeaderOptionInCall = ThisItem.Value
+                                false
                             Width: =7
                             X: =5
                             Y: =(Gal_Button.Height-Self.Height)/2
@@ -1060,9 +1063,160 @@
                             OnSelect: =Select(Parent)
                             Size: =13
                             Text: =
+                            Visible: =false
                             Width: =117.77000000000001
                             Y: =60
                             ZIndex: =3
+
+                        Container10 As groupContainer.horizontalAutoLayoutContainer:
+                            Fill: |-
+                                =If(ThisItem.Value = _V_SelectedHeaderOptionInCall,RGBA(189,195,191,0.5),
+                                    RGBA(0,0,0,0))
+                            Height: =Parent.TemplateHeight
+                            LayoutMode: =LayoutMode.Auto
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =If(ThisItem.Value = _V_SelectedHeaderOptionInCall,30,4)
+                            RadiusBottomRight: =If(ThisItem.Value = _V_SelectedHeaderOptionInCall,30,4)
+                            RadiusTopLeft: =If(ThisItem.Value = _V_SelectedHeaderOptionInCall,30,4)
+                            RadiusTopRight: =If(ThisItem.Value = _V_SelectedHeaderOptionInCall,30,4)
+                            Width: =Parent.TemplateWidth
+                            ZIndex: =4
+
+                            Icon4 As icon.People:
+                                AlignInContainer: =AlignInContainer.Center
+                                BorderColor: =RGBA(131, 24, 75, 1)
+                                Color: =If(ThisItem.Value=_V_SelectedHeaderOptionInCall,Color.Orange,Color.White)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(244, 244, 244, 1)
+                                Fill: |-
+                                    =//If(ThisItem.IsSelected,RGBA(189,195,191,0.5),
+                                        RGBA(0,0,0,0)
+                                Height: =30
+                                HoverFill: =RGBA(0,0,0,0)
+                                Icon: =If(ThisItem.Value="Customer & Contact",Icon.People,ThisItem.Value="Menu Matrix",Icon.Items,ThisItem.Value="Rich Media",Icon.Camera,ThisItem.Value="Call Objective",Icon.Phone,ThisItem.Value="Sampling",Icon.Phonebook,ThisItem.Value="Cart",Icon.ShoppingCart,ThisItem.Value="Call Summary",Icon.DocumentWithContent)
+                                Width: =30
+                                ZIndex: =1
+
+                            Gal_Button_4 As button:
+                                AlignInContainer: =AlignInContainer.Stretch
+                                BorderStyle: =BorderStyle.None
+                                BorderThickness: =0
+                                Color: =If(ThisItem.Value=_V_SelectedHeaderOptionInCall,Color.Orange,Color.White)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Fill: |-
+                                    =//If(_V_SelectedHeaderOptionInCall = Self.Text,RGBA(189,195,191,0.5),
+                                        //RGBA(0,0,0,0))
+                                        RGBA(0,0,0,0)
+                                FillPortions: =1
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Bold)
+                                Height: =(Parent.Height)-60
+                                HoverColor: =If(_V_SelectedHeaderOptionInCall = Self.Text,Color.Orange,Color.White) 
+                                HoverFill: |-
+                                    =//If(_V_SelectedHeaderOptionInCall = Self.Text,RGBA(189,195,191,0.5),RGBA(255,255,255,1))
+                                    RGBA(0,0,0,0)
+                                LayoutMinWidth: =0
+                                OnSelect: |-
+                                    =Set(Gbl_selectedCutomerFromInCall,Gbl_CurrentCustomer);
+                                    Clear(Col_NumberOfAddedDish_1);
+                                    Reset(Dropdown1_13);
+                                    Clear(Col_NumberOfAddedSKUs_1);
+                                    UpdateContext({_V_SelectedHeaderOptionInCall: Self.Text});
+                                    //UpdateContext({_V_SelectedCallAssessment: ""});
+                                    //Clear(Col_CartItem2);
+                                    Reset(DatePicker1_7);
+                                    Reset(Dropdown1_13);
+                                    Reset(Dropdown1_14);
+                                    Reset(ComboBox3_13);
+                                    Reset(TextInput1_16);
+                                    Reset(TextInput1_18);
+                                    Reset(TextInput1_19);
+                                    If(
+                                        _V_SelectedHeaderOptionInCall = "Customer & Contact",
+                                        Set(
+                                            gblLastScreen,
+                                            "FromInCallSample_ToCustomerContact"
+                                        );
+                                           Navigate(
+                                            CustomerContactScreen,
+                                            ScreenTransition.Fade,
+                                            {lclPreviousScreen: App.ActiveScreen,_V_SelectedHeaderOptionInCall: Self.Text}
+                                        ),
+                                        _V_SelectedHeaderOptionInCall = "Menu Matrix",
+                                        Set(
+                                            gblLastScreen,
+                                            "FromInCallSample_ToMenuMatrix"
+                                        );
+                                        Set(_V_SelectedCustomer,LookUp(Customers,Name=Cus_Name_4.Text));
+                                        Navigate(
+                                            'Menu Matrix Offline Screen',
+                                            ScreenTransition.Fade,
+                                            {lclPreviousScreen: App.ActiveScreen,_V_SelectedHeaderOptionInCall: Self.Text}
+                                        ),
+                                        _V_SelectedHeaderOptionInCall = "Rich Media",
+                                        Set(
+                                            gblLastScreen,
+                                            "FromInCallSample_ToRichMedia"
+                                        );
+                                        Navigate(
+                                            'Rich Media Offline Screen',
+                                            ScreenTransition.Fade,
+                                            {lclPreviousScreen: App.ActiveScreen,_V_SelectedHeaderOptionInCall: Self.Text}
+                                        )
+                                    )
+                                PaddingLeft: =10
+                                PaddingRight: =10
+                                RadiusBottomLeft: =30
+                                RadiusBottomRight: =30
+                                RadiusTopLeft: =30
+                                RadiusTopRight: =30
+                                Size: =If('In-Call Sampling Screen'.Size>3 || 'In Call Screen'.Size>3 ,11,8)
+                                Text: =ThisItem.Value
+                                Width: =Parent.Width -5
+                                ZIndex: =2
+
+                            Indicator_Button_4 As button:
+                                AlignInContainer: =AlignInContainer.Stretch
+                                BorderStyle: =BorderStyle.None
+                                BorderThickness: =0
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Fill: =RGBA(50, 45, 51, 1)
+                                FillPortions: =1
+                                FontWeight: =FontWeight.Semibold
+                                Height: =((Parent.Height)/8-7)/2
+                                HoverColor: =RGBA(255, 255, 255, 1)
+                                HoverFill: =RGBA(0,0,0,0)
+                                LayoutMinWidth: =0
+                                OnSelect: =Gal_Button_4.Pressed
+                                Size: =12
+                                Text: =
+                                Visible: |-
+                                    =//_V_SelectedHeaderOptionInCall = ThisItem.Value
+                                    false
+                                Width: =7
+                                X: =5
+                                Y: =(Gal_Button_4.Height-Self.Height)/2
+                                ZIndex: =3
+
+                            Label10_7 As label:
+                                AlignInContainer: =AlignInContainer.Stretch
+                                BorderColor: =RGBA(131, 24, 75, 1)
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FillPortions: =1
+                                Height: =10
+                                HoverFill: =RGBA(0,0,0,0)
+                                LayoutMinWidth: =0
+                                OnSelect: =//Select(Parent)
+                                Size: =13
+                                Text: =
+                                Visible: =false
+                                Width: =117.77000000000001
+                                Y: =60
+                                ZIndex: =4
 
                 "'Body_Container without Sidebar_3' As groupContainer.horizontalAutoLayoutContainer":
                     AlignInContainer: =AlignInContainer.SetByContainer
